infrastructures/ingress.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik-ingress-controller
  namespace: ingress
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik-ingress
  template:
    metadata:
      labels:
        app: traefik-ingress
        name: traefik-ingress
    spec:
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      containers:
        - image: traefik:v1.7.20
          name: traefik-ingress
          ports:
            - name: http
              containerPort: 80
              hostPort: 80
            - name: admin
              containerPort: 8080
              hostPort: 8080
          securityContext:
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE
          args:
            - --api
            - --kubernetes
            - --logLevel=INFO
---
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-service
  namespace: ingress
spec:
  selector:
    app: traefik-ingress
  ports:
    - protocol: TCP
      port: 80
      name: web
    - protocol: TCP
      port: 8080
      name: admin
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-admin-ui
  namespace: ingress
spec:
  selector:
    app: traefik-ingress
  ports:
    - name: web
      port: 80
      targetPort: 8080
  externalIPs:
    - 192.241.194.78
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-admin-ui
  namespace: ingress
spec:
  tls:
    - hosts:
        - ingress.short-d.com
      secretName: short-d.com-tls
  rules:
    - host: ingress.short-d.com
      http:
        paths:
          - path: /
            backend:
              serviceName: traefik-admin-ui
              servicePort: web
